css + js minifiés / corrections mineures (focus, contrastes)

--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -31,7 +31,7 @@
 }
 
 .fa-1-5x {
-    font-size: 1.5em
+    font-size: 18px
 }
 
 .fa-2x {
