--- a/style.css
+++ b/style.css
@@ -878,13 +878,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -902,10 +902,13 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
+    /* .bloc {
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
-    }
+    } 
+    Ne passe pas au validateur w3c
+    */
+
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -914,8 +917,9 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
+        /* padding-left: env(safe-area-inset-left);
+        padding-right: env(safe-area-inset-right); 
+    = ne passe pas au validateur w3c*/
     }
 }
 
@@ -1075,10 +1079,19 @@ h4 {
 
 
 /*ajouté pour que les focus soient plus visible lors de la navigation au clavier*/
-.btn:focus {
+.btn-focuswhite:focus {
     border: white 2px solid;
 }
 
+.btn-focusblack:focus {
+    border: black 2px solid;
+}
+
+.border-focusblack:focus {
+    border-bottom :  black 2px solid;
+    font-weight: bold;
+}
+
 .border-focus:focus {
-    border-bottom : solid white 2px;
+    border-bottom :  white 2px solid;
 }
